Tests/PySwiftASTTests/Resources/syntax_errors/invalid_assignment.py
# Invalid assignment target
5 = x
print(x)
